# radio_andrews

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: icecast.xml  radio.liq  radio.prod.liq
data/: .gitkeep  current_track.json
music/: README.md
shared/: current_track.json
src/radio_andrews/: __init__.py  app.py  cli.py  config.py  models.py
src/radio_andrews/api/: routes.py
src/radio_andrews/services/: scanner.py
static/: about.html  index.html
tests/: conftest.py  test_api.py
