[project]
name = "radio-andrews"
version = "0.1.0"
description = "Internet radio station"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
